--- a/style.css
+++ b/style.css
@@ -561,6 +561,9 @@ z-index: 99;
   
   /*  position: fixed;*/
 }
+.esri-ui .esri-attribution{
+    left:auto !important;
+}
 .esriSimpleSliderVertical .esriSimpleSliderIncrementButton {
     border-radius: 30px 30px 0 0 !important;
     outline: 0;
@@ -569,6 +572,19 @@ z-index: 99;
 .esriSimpleSliderVertical .esriSimpleSliderDecrementButton{
      border-radius: 0 0 30px 30px!important;
       outline: 0;
+}
+.infoPanel .innerTab h2{
+    font-size: 1.2rem;
+    color: #0070a8;
+    font-weight: 900;
+}
+.infoPanel .innerTab h4{
+    font-size: 1rem;
+    color: #0070a8;
+    font-weight: 900;
+}
+.infoPanel .innerTab strong {
+    color: #97c738;
 }
 .modal-open #desclaimer {
     display: flex !important;
