--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@ body, html {
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
-    font-size: 0.95rem;
+    font-size: 1rem;
     overflow: hidden;
+}
+#dvLoading {
+	background: url(images/loader.gif) no-repeat center center #fff;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 9999999;
 }
 .navbar-dark .logo {
     color: #fff;
@@ -45,7 +52,7 @@ body, html {
     font-size: 1rem;
     color: #aaa !important;
     padding: 5px 10px;
-    height: calc(100% + 15px);
+    height: calc(100% + 16px);
     margin-left: -33px;
     background: #fff;
     transform: skew(-25deg);
@@ -373,7 +380,7 @@ opacity: 1;
 }
 .right-tabs .nav:before {
     content: '';
-    width: 59px;
+    width: 61px;
     height: 30px;
     background: #0070a8;
     transform: skew(0deg, -19deg);
@@ -387,7 +394,7 @@ opacity: 1;
 }
 .right-tabs .nav:after {
     content: '';
-    width: 59px;
+    width: 61px;
     height: 30px;
     background: #0070a8;
     transform: skew(0deg, 19deg);
@@ -788,6 +795,7 @@ padding-right: 30px;
 }
 .footerGrid .footer-result .box .logo img{
     width: 100%;
+    border-radius: 50%;
 }
 .footerGrid .footer-result .box h2 {
     font-size: 13px;
@@ -868,6 +876,9 @@ padding-right: 30px;
     }
 }
 @media only screen and (max-width: 767px) {
+    .esri-ui-top-left {
+        top: 57px !important;
+    }
     .rightOverlay {
         height: calc(100vh - 41px);
     }
