preparint share widget updates done.

--- a/widgets/Share/templates/Share.html
+++ b/widgets/Share/templates/Share.html
@@ -1,3 +1,10 @@
-﻿<div>
-    
+﻿<div class="innerTab">
+    <div>
+        <div>
+            Compose E-Mail section.
+        </div>
+        <button class="share-btn" id="FaceBookSharing_btn" data-dojo-attach-event="onclick:_FacebookSharing">Facebook Sharing</button>
+        <button class="share-btn" id="TwetterSharing_btn" data-dojo-attach-event="onclick:_TwetterSharing">Twitter Sharing</button>
+        <button class="share-btn" id="OnlyExtentSharing_btn" data-dojo-attach-event="onclick:_CurrentExtentSharing">Current Extent Sharing</button>
+    </div>
 </div>
