--- a/style.css
+++ b/style.css
@@ -890,19 +890,19 @@ z-index: 99;
 
 .footerGrid {
     position: fixed;
-    left: 15px;
+    left: 10px;
     right: 0;
-    bottom: 15px;
-    height: 232px;
+    bottom: 10px;
+    height: 217px;
     display: flex;
     flex-direction: column;
     z-index: 999;
     background: #ffffff;
-    margin-bottom: -247px;
+    margin-bottom: -227px;
     transition: 0.5s all ease;
-    width: calc(100% - 30px);
+    width: calc(100% - 20px);
     border-radius: 10px;
-    padding: 15px 0;
+    padding: 15px 0 0 0;
 }
 
     .footerGrid.active {
