--- a/widgets/Share/css/Share.css
+++ b/widgets/Share/css/Share.css
@@ -1,1 +1,8 @@
-﻿
+﻿/* .share-form{
+    font-size: 13px;
+}
+.share-form .form-control {
+    border: 0;
+    border-bottom: 1px solid #aaa;
+    border-radius: 0;
+} */
