--- a/widgets/Share/templates/Share.html
+++ b/widgets/Share/templates/Share.html
@@ -19,15 +19,13 @@
                 <button class=" share-btn" id="FaceBookSharing_btn" data-dojo-attach-event="onclick:_FacebookSharing"><i
                         class="fab fa-facebook-square"></i></button>
                 <button class="share-btn" id="TwetterSharing_btn" data-dojo-attach-event="onclick:_TwetterSharing"><i
-                        class="fab fa-instagram-square"></i></button>
+                        class="fab fa-twitter-square"></i></button>
                 <button class="share-btn" id="TwetterInstagram_btn" data-dojo-attach-event="onclick:_IntagramSharing">
-                    <i class="fab fa-twitter-square"></i></button>
-
-
+                    <i class="fab fa-instagram"></i></button>
             </div>
-            <button class="share-btn" id="OnlyExtentSharing_btn"
-                data-dojo-attach-event="onclick:_CurrentExtentSharing">Current Extent Sharing</button>
         </div>
+        <button class="extent-btn" id="OnlyExtentSharing_btn"
+            data-dojo-attach-event="onclick:_CurrentExtentSharing">Current Extent Sharing</button>
     </form>
 
     <!-- </div> -->
