--- a/style.css
+++ b/style.css
@@ -787,11 +787,12 @@ z-index: 99;
 
 #desclaimer .modal-dialog .modal-content {
     border: 0;
+    background: #4e9acd !important;
 }
 
 #desclaimer .modal-dialog .modal-body {
-    background: #0A3049;
-    color: #fff;
+    background: #ffffff;
+    color: #555555;
     font-size: 0.85rem;
     border-radius: 20px;
     line-height: 1.4rem;
@@ -804,8 +805,14 @@ z-index: 99;
     border-radius: 30px;
     padding-left: 30px;
     padding-right: 30px;
+    background: #ffffff;
+    border: 0;
+    color: #14496d;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    box-shadow: none;
 }
-
 #desclaimer .discLogo {
     position: absolute;
     width: 120px;
@@ -823,6 +830,9 @@ z-index: 99;
     border: 0;
     border-radius: 20px 20px 0 0 !important;
     position: relative;
+    background: #4e9acd;
+    color: #fff
+    text-align: center;
 }
 
 #desclaimer .discLogo img {
@@ -833,6 +843,8 @@ z-index: 99;
 
 .modal-open #desclaimer .modal-dialog .modal-footer {
     border-radius: 0 0 20px 20px !important;
+    border-radius: 0 0 20px 20px !important;
+    border: 0;
 }
 
 #desclaimer.design2 .modal-dialog .modal-header .modal-title {
@@ -1085,6 +1097,56 @@ z-index: 99;
                 border-radius: 0;
                 box-shadow: none;
                 font-size: 14px;
+            }
+            .share-form  .btn-section{
+                display: flex;
+                align-items: center;
+                margin-bottom: 20px;
+            }
+            .share-form  .btn-section label{
+                margin: 0;
+            }
+            .share-form  .btn-section .btns button {
+                border: 0;
+                font-size: 20px;
+                color: #615f5f;
+                background: transparent;
+                margin: 0 2px;
+                outline: none;
+                position: relative;
+            }
+            .share-form  .btn-section .btns button::before{
+                content:'';
+            width: 1px;
+            height: 100%;
+            position: absolute;
+            top:0;
+            right: -3px;
+            background: rgb(231,231,231);
+            background: -moz-linear-gradient(180deg, rgba(231,231,231,0) 0%, rgba(0,0,0,1) 50%, rgba(244,244,244,0) 100%);
+            background: -webkit-linear-gradient(180deg, rgba(231,231,231,0) 0%, rgba(0,0,0,1) 50%, rgba(244,244,244,0) 100%);
+            background: linear-gradient(180deg, rgba(231,231,231,0) 0%, rgba(0,0,0,1) 50%, rgba(244,244,244,0) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f4f4f4",endColorstr="#f4f4f4",GradientType=1);
+            display: inline-block;
+            opacity: 0.5;
+            }
+            .share-form  .btn-section .btns button:nth-child(last)::before{
+             display: none;   
+            }
+            .share-form  .btn-section .btns button:hover{
+                color:#00b6d6;
+            }
+            .share-form .extent-btn {
+                padding: 6px 14px;
+                width: auto;
+                border-radius: 50px;
+                border: 1px solid #00b6d6;
+                outline: none !important;
+                margin: auto;
+                display: flex;
+            }
+            .share-form .extent-btn:hover, .share-form .extent-btn:focus{
+                background-color: #00b6d6;
             }
 @media only screen and (max-width: 991px) {
     .main-logo {
